wp-content/themes/otv/src/scss/partials/_header.scss
header {
	/*padding: calc(20px + (60 - 20) * (100vw - 400px) / (1440 - 400)) calc(20px + (100 - 20) * (100vw - 400px) / (1440 - 400)) 0;*/
	
	@media (min-width: $bp-xlg-min) {
		/*padding: 60px 100px 0;*/
	}
	.menu {
		background:$black;
		padding:12px 15px 8px;
		position:fixed;
		/*height:50px;*/
		right:0;
		top:41px;
		left:0;
		@include flexbox();
		@include flex-wrap(wrap);
		@include flex-direction(row);
	  z-index: 998;
	  cursor: pointer;
	  @media (min-width: $bp-md-min) {
	  	position:fixed;
	  	height:100%;
			right:0;
			top:0;
			bottom:0;
			left:auto;
			@include flexbox();
			@include flex-wrap(wrap);
			@include flex-direction(row);
			padding:20px 35px 56px 20px;
			border-left:1px solid #4D4D4D;
		}
	  .menu-wrap {
	  	position: relative;
	  	z-index: 999;
	  }
	}

	.menu.showmenu {
		opacity:1;

	}

	.open-menu {
		width: 100%;
		opacity:1;
		-webkit-transition:opacity .1s cubic-bezier(0.42,0,0.58,1);
	    -o-transition:opacity .1s cubic-bezier(0.42,0,0.58,1);
	    transition:opacity .1s cubic-bezier(0.42,0,0.58,1);
	}

	.open-menu.hideme {
		opacity:0;
	}

	.close-menu {
		position:absolute;
		top:0;
		left:0;
		padding:20px;
		cursor:pointer;
	}

	.mobile-nav {
		.open-menu-mobile {
			width:22px;
			display:inline-block;
			line-height: 1;
		}
		.close-menu-mobile {
			width:22px!important;
			width:auto;
			display:inline-block;
			line-height: 1;
		}
		a {

			display:inline-block;
			margin-right:4px;
			padding-right:9px;
			border-right:1px solid $white;
			line-height: 1;
		}
		span {
			margin-right:10px;
			display:inline-block;
			line-height: 1;
		}
	}

	.menu-items {
    width: 100%;
    @media (min-width: $bp-md-min) {
    	@include align-self(flex-end);
    }
    .menu-top {
    	width:auto;
    	text-align: right;
    	@media (min-width: $bp-md-min) {
    		width:18px;
    		text-align: center;
    	}
    	a {
    	
    		display: inline-block;
    		@media (min-width: $bp-md-min) {
    			display: block;
    			padding-bottom:30px;
	    		border-bottom:1px solid $white;
	    		margin-bottom: 30px;
    		}
    	}
    	.stories-open-menu {
    		/*-webkit-transform: rotate(90deg);
        -ms-transform: rotate(90deg);
        transform: rotate(90deg);
        display:block;
        width:18px;
    		@media (min-width: $bp-md-min) {
    			 width:auto;
    			display:block;
    			-webkit-transform: none;
        	-ms-transform: none;
          transform: none;
    		}*/
    	}
    	img {
    		display:inline-block;
    	}
    }
    .menu-bottom {
    	margin-top:40px;
    	span {
    		display:block;
    		color:$white;
    		padding: 24px 0 21px;
    		border-top:1px solid $red;
    		line-height: 1;
    		font-size: 15px;
    		text-align: center;
    		width:18px;
    	}
    }
	}

	.overlay {
		background:$black;
		padding:20px 130px 50px 20px;
		position:fixed;
		right:0;
		left:0;
		top:-100%;
		bottom:auto;
		z-index:997;
		-webkit-transition:top .4s cubic-bezier(0.42,0,0.58,1);
    -o-transition:top .4s cubic-bezier(0.42,0,0.58,1);
    transition:top .4s cubic-bezier(0.42,0,0.58,1);
    @media (min-width: $bp-md-min) {
			right:0;
			left:100%;
			top:0;
			bottom:0;
			-webkit-transition:right .4s cubic-bezier(0.42,0,0.58,1), left .4s cubic-bezier(0.42,0,0.58,1);
	    -o-transition:right .4s cubic-bezier(0.42,0,0.58,1), left .4s cubic-bezier(0.42,0,0.58,1);
	    transition:right .4s cubic-bezier(0.42,0,0.58,1), left .4s cubic-bezier(0.42,0,0.58,1);
    }
	    ul {
	    	margin:0;
	    	padding: 0;
	    	width:360px;
	    	li {
	    		list-style: none;
	    		display: block;
			    margin-bottom: 30px;
/*			    font-family: "TradeGothicBoldCondensed",sans-serif;*/
			    font-family: TradeGothicRegular;
			    text-transform: uppercase;
			    letter-spacing: 2px;
			    text-align: right;
	    		a {
	    			color: $white;
	    			position: relative;
	    			img {
	    				display: inline-block;
					    width: 70px;
					    height: auto;
					    opacity:0;
					    position:fixed;
					    bottom:340px;
					    right:15px;
					    @include transition(opacity .3s ease);
					    @media (min-width: $bp-md-min) {
					    	bottom:auto;
					    	margin-right: 30px;
						    position:absolute;
						    left:-65px;
						    top:38%;
						    margin-top:-25px;
						    width: 50px;
					    	height: auto;
					    }
	    			}
	    			&:hover {
	    				/*color:$red;*/
	    				font-weight: 600;
	    				img {
	    					opacity:1!important;
	    				}
	    			}
	    		}
	    	}
	    }

	    .nav-number {
	    	margin-left:15px;
	    	position: relative;
	    	&:after {
	    		display:block;
	    		content: '';
	    		width:23px;
	    		border-bottom:1px solid $red;
	    		position: absolute;
	    		bottom:-17px;
	    		right:0;
	    	}
	    	&.last {
	    		&:after {
		    		display:none;
		    		content:none;
		    	}
	    	}
	    }
	}

	.overlay.open {
		top:0;
		bottom:0;
		@media (min-width: $bp-md-min) {
			left:0;
			right:0;
			top:0;
			bottom:0;
		}
	}

	.menu-items-text {
		position:absolute;
		bottom:20px;
		right:15px;
		display:none;
		text-align: right;
		@media (min-width: $bp-md-min) {
			position:absolute;
			bottom:39px;
			right:130px;
			display:none;
			text-align: left;
		}
	}

	.keep-scrolling {
		position: fixed;
		bottom:20px;
		right:120px;
		display:none;
		z-index: 997;
	}
	
}

#tu-header {
	background: $black;
	padding:15px 15px 0 15px;
	position: fixed;
	left:0;
	right:0;
	top:0;
	z-index: 997;
	@media (min-width: $bp-md-min) {
		position: absolute;
		padding:16px 0 16px 60px;
	}
	img {
		width:200px;
		height:auto;
		@media (min-width: $bp-md-min) {
			width:220px;
			height:auto;
		}
	}
}

.home {
	#tu-header {
		opacity:0;
		-webkit-transition:opacity 700ms cubic-bezier(0.42,0,0.58,1);
	  -o-transition:opacity .700ms cubic-bezier(0.42,0,0.58,1);
	  transition:opacity 700ms cubic-bezier(0.42,0,0.58,1);
		&.showtuheader {
			opacity:1;
		}
	}
	.menu {
		opacity:0;
		-webkit-transition:opacity 700ms cubic-bezier(0.42,0,0.58,1);
	  -o-transition:opacity .700ms cubic-bezier(0.42,0,0.58,1);
	  transition:opacity 700ms cubic-bezier(0.42,0,0.58,1);
		&.showmenu {
			opacity:1;
		}
	}
}

.page-id-16 {
	.in-love-with-big-data {
		font-weight: 600;
	}
}

.page-id-31 {
	.whats-a-hashtag-worth {
		font-weight: 600;
	}
}

.page-id-33 {
	.personalizing-education {
		font-weight: 600;
	}
}

.page-id-37 {
	.can-uber-buy-you-a-benz {
		font-weight: 600;
	}
}

.page-id-39 {
	.calculating-new-ideas {
		font-weight: 600;
	}
}

